<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.EncodeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCart"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/btnCloseCart"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="#00FFFFFF"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="bottom"
                android:text="@string/encode_message"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btnCloseCart"
                app:layout_constraintStart_toStartOf="@id/btnCloseCart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <LinearLayout
        android:layout_width="382dp"
        android:layout_height="744dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCart"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@drawable/image_bg"
            android:padding="5dp"
            android:scaleType="centerInside"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/select_image"
            android:textColor="@color/black"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_entermsg"
            android:drawableStart="@drawable/baseline_message_24"
            android:drawablePadding="5dp"
            android:hint="@string/enter_message"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="Autofill,TextFields" />

        <EditText
            android:id="@+id/etFileName"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_entermsg"
            android:drawableStart="@drawable/baseline_attach_file_24"
            android:drawablePadding="5dp"
            android:hint="@string/file_name_without_extension_i_e_jpg_etc"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="normal"
            tools:ignore="Autofill,SpUsage,TextFields" />

        <Button
            android:id="@+id/btnEncode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/encode"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/save"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/share_encoded_image"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
