<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.DecodeActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCart"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/btnCloseCart"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="#00FFFFFF"
                android:scaleType="centerInside"
                android:src="@drawable/baseline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:tint="@color/black"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="bottom"
                android:text="@string/decode_message"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/btnCloseCart"
                app:layout_constraintStart_toStartOf="@id/btnCloseCart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideLine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideLine"
        app:layout_constraintStart_toStartOf="@+id/leftGuideLine"
        app:layout_constraintTop_toBottomOf="@+id/toolbarCart">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:background="@drawable/image_bg"
            android:scaleType="centerInside"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/select_image1"
            android:textColor="@color/black"
            tools:ignore="TextSizeCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_entermsg"
            >
            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/decoded_message_will_appear_here"
                android:padding="12dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <ImageButton
                android:id="@+id/btnCopy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical|center"
                android:layout_marginEnd="3dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/baseline_content_copy_24"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>



        <Button
            android:id="@+id/btnDecode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/teal_200"
            android:text="@string/decode"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
